--- a/my_tests.ipynb
+++ b/my_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "z  7  8  9"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "13     Sunday       Latte          35"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,133 +294,133 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>63189</th>\n",
-       "      <td>63659</td>\n",
-       "      <td>Pedro Silveira</td>\n",
-       "      <td>1973-12-11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28665</th>\n",
-       "      <td>28878</td>\n",
-       "      <td>Alie van den Bos</td>\n",
-       "      <td>1902-01-18</td>\n",
-       "      <td>Amsterdam</td>\n",
-       "      <td>Noord-Holland</td>\n",
-       "      <td>NED</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2003-07-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13555</th>\n",
-       "      <td>13637</td>\n",
-       "      <td>Jan Blomme</td>\n",
-       "      <td>1959-05-27</td>\n",
-       "      <td>Varsenare</td>\n",
-       "      <td>West-Vlaanderen</td>\n",
-       "      <td>BEL</td>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120053</th>\n",
-       "      <td>121907</td>\n",
-       "      <td>Roseli Feitosa</td>\n",
-       "      <td>1989-03-15</td>\n",
-       "      <td>São Paulo</td>\n",
-       "      <td>São Paulo</td>\n",
-       "      <td>BRA</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19246</th>\n",
-       "      <td>19382</td>\n",
-       "      <td>Ichiro Sado</td>\n",
-       "      <td>1941-02-05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>171.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112661</th>\n",
-       "      <td>113941</td>\n",
-       "      <td>Austin Smith</td>\n",
-       "      <td>1985-05-20</td>\n",
-       "      <td>Cape Town</td>\n",
-       "      <td>Western Cape</td>\n",
-       "      <td>RSA</td>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>179.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15146</th>\n",
-       "      <td>15248</td>\n",
-       "      <td>Dzintars Lācis</td>\n",
-       "      <td>1940-05-18</td>\n",
-       "      <td>Jelgava</td>\n",
-       "      <td>Jelgava</td>\n",
-       "      <td>LAT</td>\n",
-       "      <td>Soviet Union</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>1992-11-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133186</th>\n",
-       "      <td>136117</td>\n",
-       "      <td>Yassine Trabelsi</td>\n",
-       "      <td>1990-07-12</td>\n",
-       "      <td>Tunis</td>\n",
-       "      <td>Tunis</td>\n",
-       "      <td>TUN</td>\n",
-       "      <td>Tunisia</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4618</th>\n",
-       "      <td>4634</td>\n",
-       "      <td>Dashnyamyn Olzvoi</td>\n",
-       "      <td>1949-04-20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mongolia</td>\n",
+       "      <th>37231</th>\n",
+       "      <td>37527</td>\n",
+       "      <td>Anke Borchmann</td>\n",
+       "      <td>1954-06-23</td>\n",
+       "      <td>Neukalen</td>\n",
+       "      <td>Mecklenburg-Vorpommern</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>East Germany</td>\n",
        "      <td>176.0</td>\n",
-       "      <td>71.0</td>\n",
+       "      <td>65.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66939</th>\n",
-       "      <td>67450</td>\n",
-       "      <td>Solomone Bole</td>\n",
-       "      <td>1974-06-23</td>\n",
-       "      <td>Suva</td>\n",
-       "      <td>Rewa</td>\n",
-       "      <td>FIJ</td>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>79.0</td>\n",
+       "      <th>128302</th>\n",
+       "      <td>130822</td>\n",
+       "      <td>Rikako Ikee</td>\n",
+       "      <td>2000-07-04</td>\n",
+       "      <td>Edogawa</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140276</th>\n",
+       "      <td>143780</td>\n",
+       "      <td>Arvind Singh</td>\n",
+       "      <td>1996-06-17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>India</td>\n",
+       "      <td>184.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51196</th>\n",
+       "      <td>51555</td>\n",
+       "      <td>Brad Schumacher</td>\n",
+       "      <td>1974-03-06</td>\n",
+       "      <td>Bowie</td>\n",
+       "      <td>Maryland</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84240</th>\n",
+       "      <td>84910</td>\n",
+       "      <td>Dorel Cristudor</td>\n",
+       "      <td>1954-04-11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41265</th>\n",
+       "      <td>41582</td>\n",
+       "      <td>Chen Muhua</td>\n",
+       "      <td>1973-12-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>People's Republic of China</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126515</th>\n",
+       "      <td>128879</td>\n",
+       "      <td>Brenda Rojas</td>\n",
+       "      <td>1995-10-15</td>\n",
+       "      <td>San Pedro</td>\n",
+       "      <td>Provincia de Buenos Aires</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139079</th>\n",
+       "      <td>142528</td>\n",
+       "      <td>Óscar Mingueza</td>\n",
+       "      <td>1999-05-13</td>\n",
+       "      <td>Santa Perpetua de Moguda</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>ESP</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96708</th>\n",
+       "      <td>97486</td>\n",
+       "      <td>Malachy Sheridan</td>\n",
+       "      <td>1966-02-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41327</th>\n",
+       "      <td>41644</td>\n",
+       "      <td>Jaime Callejas</td>\n",
+       "      <td>1940-10-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>68.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -428,32 +428,44 @@
        "</div>"
       ],
       "text/plain": [
-       "        athlete_id               name   born_date  born_city      born_region  \\\n",
-       "63189        63659     Pedro Silveira  1973-12-11        NaN              NaN   \n",
-       "28665        28878   Alie van den Bos  1902-01-18  Amsterdam    Noord-Holland   \n",
-       "13555        13637         Jan Blomme  1959-05-27  Varsenare  West-Vlaanderen   \n",
-       "120053      121907     Roseli Feitosa  1989-03-15  São Paulo        São Paulo   \n",
-       "19246        19382        Ichiro Sado  1941-02-05        NaN              NaN   \n",
-       "112661      113941       Austin Smith  1985-05-20  Cape Town     Western Cape   \n",
-       "15146        15248     Dzintars Lācis  1940-05-18    Jelgava          Jelgava   \n",
-       "133186      136117   Yassine Trabelsi  1990-07-12      Tunis            Tunis   \n",
-       "4618          4634  Dashnyamyn Olzvoi  1949-04-20        NaN              NaN   \n",
-       "66939        67450      Solomone Bole  1974-06-23       Suva             Rewa   \n",
+       "        athlete_id              name   born_date                 born_city  \\\n",
+       "37231        37527    Anke Borchmann  1954-06-23                  Neukalen   \n",
+       "128302      130822       Rikako Ikee  2000-07-04                   Edogawa   \n",
+       "140276      143780      Arvind Singh  1996-06-17                       NaN   \n",
+       "51196        51555   Brad Schumacher  1974-03-06                     Bowie   \n",
+       "84240        84910   Dorel Cristudor  1954-04-11                       NaN   \n",
+       "41265        41582        Chen Muhua  1973-12-04                       NaN   \n",
+       "126515      128879      Brenda Rojas  1995-10-15                 San Pedro   \n",
+       "139079      142528    Óscar Mingueza  1999-05-13  Santa Perpetua de Moguda   \n",
+       "96708        97486  Malachy Sheridan  1966-02-13                       NaN   \n",
+       "41327        41644    Jaime Callejas  1940-10-13                       NaN   \n",
        "\n",
-       "       born_country           NOC  height_cm  weight_kg   died_date  \n",
-       "63189           NaN        Mexico        NaN        NaN         NaN  \n",
-       "28665           NED   Netherlands        NaN        NaN  2003-07-16  \n",
-       "13555           BEL       Belgium      180.0       73.0         NaN  \n",
-       "120053          BRA        Brazil      173.0       79.0         NaN  \n",
-       "19246           NaN         Japan      171.0       66.0         NaN  \n",
-       "112661          RSA  South Africa      179.0       73.0         NaN  \n",
-       "15146           LAT  Soviet Union      180.0       79.0  1992-11-17  \n",
-       "133186          TUN       Tunisia      185.0       63.0         NaN  \n",
-       "4618            NaN      Mongolia      176.0       71.0         NaN  \n",
-       "66939           FIJ          Fiji      177.0       79.0         NaN  "
+       "                      born_region born_country                         NOC  \\\n",
+       "37231      Mecklenburg-Vorpommern          GER                East Germany   \n",
+       "128302                      Tokyo          JPN                       Japan   \n",
+       "140276                        NaN          NaN                       India   \n",
+       "51196                    Maryland          USA               United States   \n",
+       "84240                         NaN          NaN                     Romania   \n",
+       "41265                         NaN          NaN  People's Republic of China   \n",
+       "126515  Provincia de Buenos Aires          ARG                   Argentina   \n",
+       "139079                  Barcelona          ESP                       Spain   \n",
+       "96708                         NaN          NaN                     Ireland   \n",
+       "41327                         NaN          NaN                    Colombia   \n",
+       "\n",
+       "        height_cm  weight_kg died_date  \n",
+       "37231       176.0       65.0       NaN  \n",
+       "128302      170.0       56.0       NaN  \n",
+       "140276      184.0        NaN       NaN  \n",
+       "51196       193.0       90.0       NaN  \n",
+       "84240         NaN        NaN       NaN  \n",
+       "41265       156.0       48.0       NaN  \n",
+       "126515      166.0       64.0       NaN  \n",
+       "139079        NaN        NaN       NaN  \n",
+       "96708       187.0       93.0       NaN  \n",
+       "41327       172.0       68.0       NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +538,7 @@
        "8528          URU  Uruguay        NaN        NaN       NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +613,7 @@
        "13089        8575  URU  None    9.0  True  None  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1218,7 @@
        "9885   False  Bronze  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1357,7 @@
        "31454  Milton Wynants       17222  URU            None   16.0  False    None  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1573,7 @@
        "4  France        NaN        NaN  1960-10-02  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1648,7 @@
        "214035  Gabriel Hottegindre       99520  URU  None   24.0  False  None  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1693,7 @@
        "       'YEM', 'YMD', 'YUG', 'ZAM', 'ZIM', None], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1792,7 @@
        "209273  East Germany      176.0       68.0       NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1897,7 @@
        "Treinta y Tres     0       0       1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2708,7 @@
        "45651    Gilberto Tellechea       23643  URU  Uruguay    NaN  False  None  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2707,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2882,7 @@
        "Rowing                                   146.0       45.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
